# stl-2-png-thumbnailer-rust

./: README.md  package.json  runTest.js
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
tests/: testGenerateThumbnails.js
