[package]
name = "stl-to-png"
version = "0.1.0"
authors = ["sankalproy11 <sankalproy.dev@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "stl_to_png"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.1"

[dependencies]
neon = "0.10.1"
stl_io = "0.5"
image = "0.24"
rayon = "1.5"
